# code-manager

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  code_manager.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: git-workflow-standards.md
tests/: test_changelog.py  test_code_manager.py
