[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code-manager"
version = "0.2.0"
description = "Git workflow automation tool that enforces conventional commit history, CHANGELOG generation, and clean release tags."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["git", "workflow", "automation", "conventional-commits", "changelog", "release"]
authors = [
  { name = "CREATSAIF", email = "[email protected]" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/CREATSAIF/code-manager"
Repository = "https://github.com/CREATSAIF/code-manager"
Issues = "https://github.com/CREATSAIF/code-manager/issues"
Changelog = "https://github.com/CREATSAIF/code-manager/blob/master/CHANGELOG.md"

[project.scripts]
cm = "code_manager:main"